--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
       </div>
     </section>
-    <section class="preco" id="preco">
+    <section class="preco" id="preço">
       <div class="preco-item">
         <h2>Prata</h2>
         <span><sup>R$</sup>19</span>
